[package]
name = "embeddy-derive"
version = "0.1.0"
keywords = ["resources", "embedding"]
description = "Resource embedding derive macro"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
quote = "1"
syn = "2"
walkdir = "2"

[lib]
proc-macro = true
