[package]
name = "embeddy-derive"
version = "0.1.0"
keywords = ["resources", "embedding"]
description = "Resource embedding derive macro"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
quote = "1"
walkdir = "2"

[dependencies.syn]
version = "2"
default_features = false
features = ["proc-macro", "parsing", "derive"]

[lib]
proc-macro = true
